--- a/day2/styles.css
+++ b/day2/styles.css
@@ -94,3 +94,48 @@ p{
     bottom:10px;
     left:100px;
 }
+
+
+a{
+    color:red;
+    text-decoration: none;
+    font-size: 20px;
+    padding:10px;
+    border-radius: 10px;
+    background-color: aliceblue;
+}
+
+a:hover{
+    padding:10px;
+    color:blue;
+    background-color:aqua;
+}
+
+@media (max-width:600px){
+    body{
+        background-color: lightgray;
+    }
+}
+
+.btn{
+    background-color: blue;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    margin:5px;
+}
+
+.btn-red{
+    background-color: red;;
+}
+
+.btn-green{
+    background-color: green;
+}
+
+.btn-pink{
+    background-color: pink;
+}
